# mento-backend

./: .dockerignore  .env.example  .gitattributes  .gitignore  .pre-commit-config.yaml  Dockerfile  README.md  app.py  components.py  mento_pipeline.py  otel-collector-config.yaml  prompts.py  pyproject.toml  requirements.txt  settings.py
.github/workflows/: aws-deploy.yml  docker-cache-check.yml
tests/: test_core.py  test_endpoints.py
