[project]
name = "mento-backend"
version = "0.1.0"
description = "RAG-based multilingual mental health support chatbot backend"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "datasets>=5.0.0",
    "flask>=3.1.3",
    "flask-cors>=4.0.0",
    "groq>=0.37.1",
    "gspread>=6.0.0",
    "joblib>=1.5.3",
    "langchain>=1.3.4",
    "langchain-classic>=1.0.7",
    "langchain-community>=0.4.2",
    "langchain-core>=1.4.1",
    "langchain-groq>=1.1.2",
    "langchain-huggingface>=1.2.2",
    "langchain-qdrant>=1.1.0",
    "langchain-text-splitters>=1.1.2",
    "langsmith>=0.8.9",
    "numpy>=2.4.6",
    "python-dotenv>=1.2.2",
    "qdrant-client>=1.18.0",
    "requests>=2.0.0",
    "scikit-learn>=1.9.0",
    "sentence-transformers>=5.5.1",
    "torch>=2.12.0",
    "transformers>=5.10.2",
]

[project.optional-dependencies]
dev = [
    "pre-commit>=3.7.0",
    "pytest>=8.0.0",
    "pytest-mock>=3.14.0",
    "ruff>=0.4.4",
]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]
ignore = ["E501"]

[tool.ruff.lint.isort]
known-first-party = ["settings", "prompts", "components", "rag_service", "mento_pipeline", "feedback_service"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_functions = ["test_*"]
